# dannis-agent-poc

./: .env.example  .gitignore  CONTEXT.md  README.md  agent.py  pyproject.toml  test_api.py
docs/adr/: 0001-session-management.md
src/dannis_agent/: __init__.py  __main__.py  cli.py
src/dannis_agent/agent/: __init__.py  core.py  parser.py
src/dannis_agent/llm/: __init__.py  client.py
src/dannis_agent/memory/: __init__.py  session.py
src/dannis_agent/tools/: __init__.py  base.py  files.py  registry.py  shell.py
tests/: __init__.py  test_agent.py  test_session.py
